@@ -5,6 +5,8 @@ Version 0.8.0~dev
 	* Limit number of results to commit at the same time (default 50).
 	Configration value is 'limit_commit'.
 	* Allow to limit plugins to several groups.
+	* Save history only when job is finished and new status differs from
+	previously saved status.
 
 Version 0.7.0 Released on 2010/04/21
 
